--- a/client/package.json
+++ b/client/package.json
@@ -11,8 +11,12 @@
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
     "axios": "^0.20.0",
+    "history": "^5.0.0",
     "material-ui-popup-state": "^1.7.0",
+    "ra-data-json-server": "^3.9.5",
+    "ra-data-simple-rest": "^3.9.3",
     "react": "^16.13.1",
+    "react-admin": "^3.9.5",
     "react-dom": "^16.13.1",
     "react-image-lightbox": "^5.1.1",
     "react-redux": "^7.2.1",
@@ -20,7 +24,8 @@
     "react-scripts": "3.4.3",
     "redux": "^4.0.5",
     "redux-persist": "^6.0.0",
-    "redux-thunk": "^2.3.0"
+    "redux-thunk": "^2.3.0",
+    "uuid": "^8.3.1"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -42,6 +47,5 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  },
-  "proxy": "http://localhost:5000"
+  }
 }
