--- a/client/package.json
+++ b/client/package.json
@@ -26,7 +26,8 @@
     "redux": "^4.0.5",
     "redux-persist": "^6.0.0",
     "redux-thunk": "^2.3.0",
-    "uuid": "^8.3.1"
+    "uuid": "^8.3.1",
+    "validator": "^13.1.17"
   },
   "scripts": {
     "start": "react-scripts start",
