--- a/client/package.json
+++ b/client/package.json
@@ -26,6 +26,7 @@
     "redux": "^4.0.5",
     "redux-persist": "^6.0.0",
     "redux-thunk": "^2.3.0",
+    "sslcommerz": "^1.0.4",
     "uuid": "^8.3.1",
     "validator": "^13.1.17"
   },
