--- a/package.json
+++ b/package.json
@@ -21,13 +21,17 @@
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.19.0",
     "cors": "^2.8.5",
+    "crypto": "^1.0.1",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "got": "^11.8.0",
     "joi": "^17.3.0",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.10.9",
     "multer": "^1.4.2",
-    "nodemailer": "^6.4.14"
+    "nodemailer": "^6.4.14",
+    "sslcommerz": "^1.0.4",
+    "uuid": "^8.3.1"
   },
   "devDependencies": {
     "concurrently": "^5.3.0",
