--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
     "client": "npm start --prefix client",
     "client-install": "npm i --prefix client",
     "server": "nodemon index",
-    "dev": "concurrently \"npm run server\" \"npm run client\" "
+    "dev": "concurrently \"npm run server\" \"npm run client\" ",
+    "prod": "NODE_ENV=production node index",
+    "prod:win": "set NODE_ENV=production&node index"
   },
   "keywords": [
     "MERN"
@@ -20,6 +22,7 @@
     "axios": "^0.21.0",
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.19.0",
+    "colors": "^1.4.0",
     "cors": "^2.8.5",
     "crypto": "^1.0.1",
     "dotenv": "^8.2.0",
