--- a/package.json
+++ b/package.json
@@ -35,7 +35,8 @@
     "multer": "^1.4.2",
     "nodemailer": "^6.4.14",
     "sslcommerz": "^1.0.4",
-    "uuid": "^8.3.1"
+    "uuid": "^8.3.1",
+    "xls-parser": "^3.1.0"
   },
   "devDependencies": {
     "concurrently": "^5.3.0",
