--- a/.env.dev
+++ b/.env.dev
@@ -6,12 +6,13 @@ JWT_SECRET=oxzcpaierqnwjndkslcjaisuroiednzsdbaev
 isSandboxMode=true
 SSL_store_id=unive5fb7580e16834
 SSL_store_password=unive5fb7580e16834@ssl
-Fee=6000
+Fee=300
 
 NODE_ENV=development
-
+PORT=5000
 ADMIN_ID=adminId123
 ADMIN_USERNAME=@admin@icpc.du.
 ADMIN_PASSWORD=icpc2020.du.ac.bd
 
-PORT=1234
+EMAIL_USERNAME=icpcwebmaster@cse.du.ac.bd
+EMAIL_PASSWORD=9f-f-wee305r01
