--- a/package.json
+++ b/package.json
@@ -30,7 +30,9 @@
     "express": "^4.17.1",
     "got": "^11.8.0",
     "joi": "^17.3.0",
+    "json2csv": "^5.0.6",
     "jsonwebtoken": "^8.5.1",
+    "moment": "^2.29.1",
     "mongoose": "^5.10.9",
     "multer": "^1.4.2",
     "nodemailer": "^6.4.14",
