--- a/client/package.json
+++ b/client/package.json
@@ -32,6 +32,7 @@
     "redux": "^4.0.5",
     "redux-persist": "^6.0.0",
     "redux-thunk": "^2.3.0",
+    "simple-react-lightbox": "^3.6.6",
     "sslcommerz": "^1.0.4",
     "uuid": "^8.3.1",
     "validator": "^13.1.17"
